--- a/examples/pitch-roll-yaw.html
+++ b/examples/pitch-roll-yaw.html
@@ -8,6 +8,7 @@ var ctx = canvas.getContext("2d");
 ctx.translate(canvas.width/2,canvas.height/2);
 ctx.fillStyle = "#000";
 ctx.font = "14px Monospace";
+ctx.lineWidth = 4;
 
 function draw(obj) {
   if (obj.hands.length > 0) {
@@ -16,48 +17,27 @@ function draw(obj) {
     var hand = obj.hands[0];
     var pos = hand.palmPosition;
 
+    ctx.save();
     // labels
     ctx.textAlign = "center";
-    ctx.lineWidth = 4;
     ctx.strokeStyle = "#e6e6e6";
-    ctx.fillStyle = "#555";
+    ctx.fillStyle = "#333";
     vec3([1,1,1], ["up","right","back"]);
     ctx.rotate(Math.PI);
     vec3([1,1,1], ["down","left","forward"]);
-    ctx.rotate(Math.PI);
+    ctx.restore();
 
     ctx.save();
-
+    ctx.textAlign = "center";
     // pitch
     ctx.rotate(-Math.PI/2);
-    ctx.fillStyle = "rgba(15,58,150,1)";
-    arcLabel("pitch");
-    ctx.fillStyle = "rgba(15,58,150,0.4)";
-    ctx.beginPath();
-    ctx.moveTo(0,0)
-    arc(hand.pitch());
-    ctx.fill();
-
+    rotation(hand, "pitch", [15,58,150]);
     // yaw
     ctx.rotate(Math.PI/3);
-    ctx.fillStyle = "rgba(15,140,58,1)";
-    arcLabel("yaw");
-    ctx.fillStyle = "rgba(15,140,58,0.4)";
-    ctx.beginPath();
-    ctx.moveTo(0,0)
-    arc(hand.yaw());
-    ctx.fill();
-
+    rotation(hand, "yaw", [15,140,58]);
     // roll
     ctx.rotate(Math.PI/3);
-    ctx.fillStyle = "rgba(150,38,15,1)";
-    arcLabel("roll");
-    ctx.fillStyle = "rgba(150,38,15,0.4)";
-    ctx.beginPath();
-    ctx.moveTo(0,0)
-    arc(hand.roll());
-    ctx.fill();
-
+    rotation(hand, "roll", [150,30,15]);
     ctx.restore();
 
     ctx.textAlign = "start";
@@ -69,12 +49,14 @@ function draw(obj) {
     ctx.fillText("Y " + pos[1].toFixed(2), 190, 20);
     ctx.fillText("Z " + pos[2].toFixed(2), 190, 40);
 
+    ctx.save();
     ctx.strokeStyle = "#000";
     vec3([
       (pos[1]-200)/200,
       pos[0]/200,
       pos[2]/200
     ]);
+    ctx.restore();
   }
 };
 
@@ -95,6 +77,16 @@ function arcLabel(d) {
   ctx.fillText(d,0,-130);
   ctx.rotate(Math.PI/3);
 }
+
+function rotation(hand, type, color) {
+  ctx.fillStyle = "rgba(" + color[0] + "," + color[1] + "," + color[2] + ",1)";
+  arcLabel(type);
+  ctx.fillStyle = "rgba(" + color[0] + "," + color[1] + "," + color[2] + ",0.5)";
+  ctx.beginPath();
+  ctx.moveTo(0,0)
+  arc(hand[type]());
+  ctx.fill();
+};
 
 function vec3(vec,label) {
   line(vec[0]);
