--- a/examples/pitch-roll-yaw.html
+++ b/examples/pitch-roll-yaw.html
@@ -2,7 +2,8 @@
 <canvas id="hand-2" width=360 height=360></canvas>
 <canvas id="hand-3" width=360 height=360></canvas>
 <canvas id="hand-4" width=360 height=360></canvas>
-<p>based on the <a href="https://en.wikipedia.org/wiki/Six_degrees_of_freedom">six degrees of freedom</a></p>
+<p>Press <strong>Space</strong> to reset the origin based on first hand position/orientation</p>
+<p>Based on the <a href="https://en.wikipedia.org/wiki/Six_degrees_of_freedom">six degrees of freedom</a></p>
 <script src="../leap.js"></script>
 <script>
 // calibrated positions
